fix [#35346] Python: still UI issue with popup and dropdown list